Fix nav align

--- a/app/assets/stylesheets/common/structure.scss
+++ b/app/assets/stylesheets/common/structure.scss
@@ -428,7 +428,8 @@ body {
         a {
           text-indent: -9999px;
           height: 32px;
-          padding: 10px 30px;
+          margin: 0 30px 0 10px;
+          padding: 0;
         }
       }
     }
